<resources>
    <string name="app_name">AniView</string>
    <string name="anime">Naruto</string>
    <string name="detail_anime">Detail Anime</string>
    <string name="anime_image">Anime Image</string>
    <string name="anime_name">Anime Name</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="sinopsis">Sinopsis: </string>
    <string name="desc">Anime Description</string>
    <string name="visit">Visit MyAnimeList</string>
    <string-array name="anime_names">
        <item>Attack on Titan</item>
        <item>Bleach</item>
        <item>Cowboy Bebop</item>
        <item>Death Note</item>
        <item>Demon Slayer</item>
        <item>Edens Zero</item>
        <item>Fullmetal Alchemist Brotherhood</item>
        <item>Gangsta.</item>
        <item>Hunter×Hunter</item>
        <item>Inazuma Eleven</item>
        <item>Jujutsu Kaisen</item>
        <item>K</item>
        <item>Log Horizon</item>
        <item>My Hero Academia</item>
        <item>Naruto</item>
        <item>One Piece</item>
        <item>Persona 4</item>
        <item>Steins;Gate</item>
    </string-array>
</resources>