<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:title="@string/detail_anime"
            android:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_backbtn"
            app:titleTextAppearance="@style/ToolbarTitleText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="4dp" />

        <ImageView
            android:id="@+id/detailAnimeImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/anime_image"
            android:src="@drawable/naruto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topAppBar"/>

        <TextView
            android:id="@+id/detailAnimeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/detailAnimeImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/anime_name" />

        <TextView
            android:id="@+id/detailAnimeGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/detailAnimeName"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/genre" />

        <TextView
            android:id="@+id/detailAnimeYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:text="@string/year"
            app:layout_constraintTop_toBottomOf="@id/detailAnimeGenre"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/sinopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/detailAnimeYear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/sinopsis"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/detailAnimeDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/sinopsis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/desc"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/webButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:text="@string/visit"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailAnimeDescription"
            android:layout_marginTop="40dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
